--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,10 @@ version: 2
 # Personal info
 name: Rowan Gauld
 title: Intermediate Software Engineer/Developer
-email: brett.h@email.co.uk
-website: www.github.com/sproogen/resume-theme
+email: rowangauld1@gmail.com
 
 # Dark Mode (true/false/never)
-darkmode: false
+darkmode: true
 
 # Social links
 github_username: RowanG99
@@ -42,24 +41,67 @@ content:
         #   #   icon: fab fa-github
         #   #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
         description: | # this will include new lines to allow paragraphs
-          After my first year software engineer/developer, I realised that I'd like to learn more about the software that is used to make most software, C.
+          After my first year as a software engineer/developer, I realised that I'd like to learn more about the software that is used to make most software, C.
+      
       - layout: top-middle
         title: Crafting Interpreters by Robert Nystrom
         link: link_to_be_inserted
-          After completing the book "THe C Programming Languages" by Brain Kernighan and Dennies Richie, I wanted to apply what I have learnt and used this book as a guide for creating an interpreter.
-  - title: Experience # Title for the section
-    layout: list # Type of content section (list/text)
+        description: |
+          After completing the book "The C Programming Languages" by Brain Kernighan and Dennies Richie, I wanted to apply what I have learnt and used this book as a guide for creating an interpreter.
+      
+      - layout: top-middle
+        title: Learning Go with Pocket-Sized Projects by Aliénor Latour, Pascal Bertrand, Donia Chaiehloudj
+        link: link_to_be_inserted
+        description: |
+          Thinking about what type of software I'd like to make in the future and what my current tool box contains, I thought Golang would be a great addition.
+
+      - layout: top-middle
+        title: C Interfaces and Implementations, Techniques for Creating Reusable Software
+        link: link_to_be_inserted
+        description: |
+          Not only did I think this book would help me expand my knowledge in C but in programming and software engineering in general.
+
+      - layout: top-middle
+        title: Automate the Boring Stuff with Python by Al Sweigart
+        link: link_to_be_inserted
+        description: |
+          I used this book to expand my Python knowledge.
+  
+  - title: Experience
+    layout: list
     content:
       - layout: left
-        title: The Boring Company
-        link: boringcompany.com
-        # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
+        title: BMW IT Hub
+        link: https://www.bmwithub.co.za/
+        sub_title: Junior Software Engineer
+        caption: 2024-2026
         quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+          Intelligent Document Processing - Artificial Intelligence Platforms Department
         description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+            - Designed and developed key client facing APIs such as metric calculations and CRUD processes
+            - Designed and developed internal APIs that ensured data in our database remained up to date and reliable
+            - Designed and developed scripts and tooling relating to our CICD pipeline such creating or automatically renewed SSL certificates and uploaded them to AWS ACM, updating documentation relating to deployments, ensuring our runners had enough space and more
+            - Designed and developed our unit testing environment
+            - Responsible for our security posture, ensuring our application met compliance standards
+        
+        sub_title: Graduate
+        caption: 2024-2026
+        quote: >
+          BMW IT Hub Graduate programme
+        description: | # this will include new lines to allow paragraphs
+            - Received training specific to AWS and obtained my AWS CP certification
+            - Received training specific to Agile and CICD
+            - Participated in internal hackathons such as developing a dashboard to view data relating to the movement of BMWs as the ownership changes from first hand owners to second hand owners
+
+      - layout: left
+        title: University of Pretoria
+        link: https://www.up.ac.za/
+        sub_title: Assistant Lecture
+        caption: 2024-2026
+        quote: >
+          First year programming - Informatics Dept.
+        description: | # this will include new lines to allow paragraphs
+            - One of the assistant lecturers that led tutorial sessions
 
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
