--- a/_config.yml
+++ b/_config.yml
@@ -25,22 +25,87 @@ about_content: |
   I like to think that I don't just developer solutions, I engineer them. I am a firm believer that the software must not just work but it must work well, it needs to be tested thoroughly, optimized and refined. 
   I enjoy developing a variety of software, ranging from; scripts that automate processes, APIs, services, web applications and I dabble with software written in C such as interpreters, compilers and OS.
 
-content:
+content:  
+  - title: Experience
+    layout: list
+    content:
+      - layout: left
+        title: BMW IT Hub
+        link: https://www.bmwithub.co.za/
+        quote: Intelligent Document Processing - Artificial Intelligence Platforms Department
+        sub_title: Junior Software Engineer
+        caption: 2024-2026
+        description: | # this will include new lines to allow paragraphs
+          - Designed and developed key client facing APIs such as metric calculations and CRUD processes
+          - Designed and developed internal APIs that ensured data in our database remained up to date and reliable
+          - Designed and developed scripts and tooling relating to our CICD pipeline such creating or automatically renewed SSL certificates and uploaded them to AWS ACM, updating documentation relating to deployments, ensuring our runners had enough space and more
+          - Designed and developed our unit testing environment
+          - Responsible for our security posture, ensuring our application met compliance standards
+
+      - layout: left
+        title: BMW IT Hub
+        link: https://www.bmwithub.co.za/
+        quote: BMW IT Hub Graduate programme
+        sub_title: Graduate
+        caption: 2024-2026
+        description: | # this will include new lines to allow paragraphs
+          - Received training specific to AWS and obtained my AWS CP certification
+          - Received training specific to Agile and CICD
+          - Participated in internal hackathons such as developing a dashboard to view data relating to the movement of BMWs as the ownership changes from first hand owners to second hand owners
+
+      - layout: left
+        title: University of Pretoria
+        link: https://www.up.ac.za/
+        quote: First year programming - Informatics Dept.
+        sub_title: Assistant Lecture
+        caption: 2024-2026
+        description: | # this will include new lines to allow paragraphs
+            - One of the assistant lecturers that led tutorial sessions
+
+  - title: Education # Title for the section
+    layout: list # Type of content section (list/text)
+    content:
+      - layout: left
+        title: University of Pretoria
+        caption: 2022
+        sub_title: BComHons Informatics
+      
+      - layout: left
+        title: University of Pretoria
+        caption: 2019-2021
+        sub_title: BCom Informatics
+
+  - title: Certifications
+    layout: list
+    content:
+      - layout: left
+        title: AWS Cloud Practitioner
+
+      - layout: left
+        title: AWS Developer Associate
+
+      - layout: left
+        title: Comptia Networking
+  
+  - title: Technologies
+    layout: list
+    content:
+      - layout: left
+        title: Languages
+        description: |
+          Python, Go, C, Terraform, Bash and I can work with SQL and JS
+      
+      - layout: left
+        title: Other
+        description: |
+          AWS, Azure, Git
+  
   - title: Projects and Books
     layout: list
     content:
       - layout: top-middle
         title: The C Programming Language by Brain Kernighan and Dennies Richie
         link: link_to_be_inserted
-        # link_text: Project Website
-        # additional_links:
-        #   - title:  sproogen/modern-resume-theme
-        #     icon: fab fa-github
-        #     url: github.com/sproogen/modern-resume-theme
-        #   # - title:  Github page for project (eg. sproogen/modern-resume-theme)
-        #   #   icon: fab fa-github
-        #   #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
-        description: | # this will include new lines to allow paragraphs
           After my first year as a software engineer/developer, I realised that I'd like to learn more about the software that is used to make most software, C.
       
       - layout: top-middle
@@ -66,71 +131,7 @@ content:
         link: link_to_be_inserted
         description: |
           I used this book to expand my Python knowledge.
-  
-  - title: Experience
-    layout: list
-    content:
-      - layout: left
-        title: BMW IT Hub
-        link: https://www.bmwithub.co.za/
-        sub_title: Junior Software Engineer
-        caption: 2024-2026
-        quote: >
-          Intelligent Document Processing - Artificial Intelligence Platforms Department
-        description: | # this will include new lines to allow paragraphs
-            - Designed and developed key client facing APIs such as metric calculations and CRUD processes
-            - Designed and developed internal APIs that ensured data in our database remained up to date and reliable
-            - Designed and developed scripts and tooling relating to our CICD pipeline such creating or automatically renewed SSL certificates and uploaded them to AWS ACM, updating documentation relating to deployments, ensuring our runners had enough space and more
-            - Designed and developed our unit testing environment
-            - Responsible for our security posture, ensuring our application met compliance standards
-            
-      - layout: left
-        title: BMW IT Hub
-        link: https://www.bmwithub.co.za/
-        sub_title: Graduate
-        caption: 2024-2026
-        quote: >
-          BMW IT Hub Graduate programme
-        description: | # this will include new lines to allow paragraphs
-            - Received training specific to AWS and obtained my AWS CP certification
-            - Received training specific to Agile and CICD
-            - Participated in internal hackathons such as developing a dashboard to view data relating to the movement of BMWs as the ownership changes from first hand owners to second hand owners
 
-      - layout: left
-        title: University of Pretoria
-        link: https://www.up.ac.za/
-        sub_title: Assistant Lecture
-        caption: 2024-2026
-        quote: >
-          First year programming - Informatics Dept.
-        description: | # this will include new lines to allow paragraphs
-            - One of the assistant lecturers that led tutorial sessions
-
-  - title: Education # Title for the section
-    layout: list # Type of content section (list/text)
-    content:
-      - layout: left
-        title: Harvard University
-        caption: 2010 - 2013
-        sub_title: BSc Computer Science
-        quote: >
-          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
-        description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
-
-          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
-
-  - title: A Little More About Me
-    layout: text
-    content: | # this will include new lines to allow paragraphs
-      Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-      - Rock climbing
-      - Gaming
-      - Knitting
-      - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
-
-      Look at this cool image  
-      ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
 
 # Footer
 footer_show_references: true
