--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,8 @@ about_profile_image: images/profile.jpg
 about_content: |
   I am a backend and devops engineer/developer that has experience in using modern and more mature technologies to solve problems within the context of software development and engineering. 
   I like to think that I don't just developer solutions, I engineer them. I am a firm believer that the software must not just work but it must work well, it needs to be tested thoroughly, optimized and refined. 
-  I enjoy developing a variety of software, ranging from; scripts that automate processes, APIs, services, web applications and I dabble with software written in C such as interpreters, compilers and OS.
+  I enjoy developing a variety of software, ranging from; scripts that automate processes, APIs, services, web applications and I dabble with software written in C such as interpreters, compilers and OS. 
+  From a language perspective, my toolbox consists of the following; Python, Go, C, Terraform, Bash and I can work with SQL and JS and I can use a wide range of other technologies such as AWS, Azure, Git, Docker, etc.
 
 content:  
   - title: Experience
@@ -35,7 +36,7 @@ content:
         quote: Intelligent Document Processing - Artificial Intelligence Platforms Department
         sub_title: Junior Software Engineer
         caption: 2024-2026
-        description: | # this will include new lines to allow paragraphs
+        description: | 
           - Designed and developed key client facing APIs such as metric calculations and CRUD processes
           - Designed and developed internal APIs that ensured data in our database remained up to date and reliable
           - Designed and developed scripts and tooling relating to our CICD pipeline such creating or automatically renewed SSL certificates and uploaded them to AWS ACM, updating documentation relating to deployments, ensuring our runners had enough space and more
@@ -48,7 +49,7 @@ content:
         quote: BMW IT Hub Graduate programme
         sub_title: Graduate
         caption: 2023
-        description: | # this will include new lines to allow paragraphs
+        description: | 
           - Received training specific to AWS and obtained my AWS CP certification
           - Received training specific to Agile and CICD
           - Participated in internal hackathons such as developing a dashboard to view data relating to the movement of BMWs as the ownership changes from first hand owners to second hand owners
@@ -59,69 +60,57 @@ content:
         quote: First year programming - Informatics Dept.
         sub_title: Assistant Lecture
         caption: 2024-2026
-        description: | # this will include new lines to allow paragraphs
+        description: |
             - One of the assistant lecturers that led tutorial sessions
 
-  - title: Education and Certificates # Title for the section
-    layout: list # Type of content section (list/text)
+  - title: Education
+    layout: list
     content:
       - layout: left
         title: University of Pretoria
         caption: 2022
         sub_title: BComHons Informatics
-      
+        description: |
+          - Wrote a literature review paper on how NLP and other ML techniques could be used to extract data from documents.
+          - Completed modules that relate to the following; enterprise architecture, data warehousing, data science, project management
+
       - layout: left
         title: University of Pretoria
         caption: 2019-2021
         sub_title: BCom Informatics
-      
-      - layout: left
-        title: Certificates
         description: |
-          - AWS Cloud Practitioner
-          - AWS Developer Associate
-          - Comptia Networking
-  
-  - title: Technologies
-    layout: list
-    content:
-      - layout: left
-        title: Languages
-        description: |
-          Python, Go, C, Terraform, Bash and I can work with SQL and JS
-      
-      - layout: left
-        title: Other
-        description: |
-          AWS, Azure, Git
+          - Completed programming modules that focus on the use of C#, JS, SQL and R.
+          - Completed theory modules that relate to system design, database design and management and project management
+          - Completed modules that relate to statistics, internal auditing, data analysis
   
   - title: Projects and Books
     layout: list
     content:
-      - layout: top-middle
+      - layout: left
         title: The C Programming Language by Brain Kernighan and Dennies Richie
         link: link_to_be_inserted
+        description: |
           After my first year as a software engineer/developer, I realised that I'd like to learn more about the software that is used to make most software, C.
       
-      - layout: top-middle
+      - layout: left
         title: Crafting Interpreters by Robert Nystrom
         link: link_to_be_inserted
         description: |
           After completing the book "The C Programming Languages" by Brain Kernighan and Dennies Richie, I wanted to apply what I have learnt and used this book as a guide for creating an interpreter.
       
-      - layout: top-middle
+      - layout: left
         title: Learning Go with Pocket-Sized Projects by Aliénor Latour, Pascal Bertrand, Donia Chaiehloudj
         link: link_to_be_inserted
         description: |
           Thinking about what type of software I'd like to make in the future and what my current tool box contains, I thought Golang would be a great addition.
 
-      - layout: top-middle
+      - layout: left
         title: C Interfaces and Implementations, Techniques for Creating Reusable Software
         link: link_to_be_inserted
         description: |
           Not only did I think this book would help me expand my knowledge in C but in programming and software engineering in general.
 
-      - layout: top-middle
+      - layout: left
         title: Automate the Boring Stuff with Python by Al Sweigart
         link: link_to_be_inserted
         description: |
