added linkedin link

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Intermediate Software Engineer/Developer
 darkmode: true
 
 github_username: RowanG99
-linkedin_username: Rowan Gauld
+linkedin_username: www.linkedin.com/in/rowan-gauld
 
 about_title: About Me
 about_profile_image: images/profile.jpg
